replaced List.of() with Collections.emptyList() in DummyEventsChecker